--- a/src/main/java/com/clouway/servlets/task2/html/second_page.html
+++ b/src/main/java/com/clouway/servlets/task2/html/second_page.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 <form action="http://localhost:8080/threePagesServlet" method="post" >
-    <h2 name="link" value="Second page">Second page!</h2>
+    <h2>Second page!</h2>
+    <input type="hidden" name="link" value="Second page">
     <input type="submit" value="Submit">
 </form>
 </body>
