--- a/src/main/java/com/clouway/servlets/task2/html/third_page.html
+++ b/src/main/java/com/clouway/servlets/task2/html/third_page.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 <form action="http://localhost:8080/threePagesServlet" method="post" >
-    <h2  name="link" value="Third page">Third page!</h2>
+    <h2>Third page!</h2>
+    <input type="hidden" name="link" value="Third page">
     <input type="submit" value="Submit">
 </form>
 </body>
