add three servlets for each html page

--- a/src/main/webapp/WEB-INF/html/task3/firstPage.html
+++ b/src/main/webapp/WEB-INF/html/task3/firstPage.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h2>Home page</h2>
-<form action="http://localhost:8080/myservlet" method="post">
+<form action="/myservlet" method="post">
     <p>
         <input type="radio" name="link" value="Second link" checked/>
         <a href="myservlet?link=second_link">Second link</a></p>
