add Registration form and make some fixes

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,10 +6,11 @@
     <link rel="stylesheet" href="index.css"/>
     <h2>Welcome to your online bank!</h2>
 </head>
+<body>
 <p>
 
 
-<form action="login" method="get">
+<form action="http://localhost:8080/loginServlet" method="get">
     <fieldset>
     <legend style="color: midnightblue">Login form:</legend>
     <p>
@@ -20,11 +21,11 @@
     </p>
         <p>
             <input type="submit" name="login" value="Login">
-            <input type="submit" name="registration" value="Registration">
+            <a href="registration.html"> Registration</a>
         </p>
         </fieldset>
 </form>
-<img src="onlinebanking.jpg" alt="onlineBanking" style="float:right;width:304px;height:228px;">
+
 
 
 </body>
